fix padding on mobile menu li

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,13 +15,3 @@ article {
     margin: 0 auto;
   }
 }
-
-.content li {
-  margin-bottom: .15em;
-}
-
-p {
-  font-family: 'Muli', sans-serif;
-  margin-bottom: 1em;
-  text-align: justify;
-}
